algorithms: add the 'create incoming payment request' section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                 title: "Open Payments Auth Server",
                 href: "https://openpayments.dev/apis/auth-server/",
             },
+            oprs: {
+                title: "Open Payments Resource Server",
+                href: "https://openpayments.dev/apis/resource-server/",
+            },
             GNAP: {
                 title: "GNAP",
                 href: "https://datatracker.ietf.org/doc/html/draft-ietf-gnap-core-protocol",
