--- a/section/storage.html
+++ b/section/storage.html
@@ -61,7 +61,7 @@
         </section>
 
        <section>
-        <h3>Storage Operations</h3>
+        <h3>Storage operations</h3>
 
         <div class="algorithm">
             <p>To <dfn>get storage</dfn>:</p>
