--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <div data-include="section/storage.html" data-include-replace="true"></div>
     <div data-include="section/authentication.html" data-include-replace="true"></div>
     <div data-include="section/wallet-setup.html" data-include-replace="true"></div>
+    <div data-include="section/status.html" data-include-replace="true"></div>
     <div data-include="section/session-flow.html" data-include-replace="true"></div>
     <div data-include="section/algorithms.html" data-include-replace="true"></div>
     <div data-include="section/dictionaries.html" data-include-replace="true"></div>
