session-flow: add session payment algorithms structure

--- a/section/algorithms.html
+++ b/section/algorithms.html
@@ -711,7 +711,7 @@
         given |userWalletAddressDetails:WalletAddressDetails|,
         |incomingPaymentId:DOMString|,
         |debitAmountValue:DOMString|,
-        |outgoingPaymentGrant:Grant|, perform the following steps.
+        and |outgoingPaymentGrant:Grant|, perform the following steps.
         <ol>
           <li>
             Let |resourceServer:URL| be the result of running [=URL parser=] with
